--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-sentence-transformers==2.2.2
-langchain
+ctransformers==0.2.5
+sentence-transformers==3.2.1S
+pinecone-client==2.2.4
+langchain==0.0.225
 flask
 pypdf
 python-dotenv
-pinecone[grpc]
-langchain-pinecone
-langchain_community
-langchain_openai
-langchain_experimental
 -e .
