--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-ctransformers==0.2.5
-sentence-transformers==3.2.1S
-pinecone-client==2.2.4
-langchain==0.0.225
+ctransformers==0.2.27
+sentence-transformers==3.2.1
+pinecone[grpc]
+langchain
 flask
 pypdf
 python-dotenv
+langchain_pinecone
+langchain_community
+langchain_experimental
 -e .
